# autotool-experiments

./: .gitignore  CMakeLists.txt  Makefile.am  NOTES.txt  README  configure.ac
src/: app_main.c  comm.c  comm.h  driver_1.c  driver_2.c  driver_3.c  driver_4.c  driver_5.c  drivers.c  drivers.h  drivers.ld  runtime_register.c  runtime_register.h
