AC_INIT([driverlist], [0.01], [author@example.com], [driverlist], [http://homepage.example.com])
AC_PREREQ([2.68])
AC_CONFIG_SRCDIR([src/app_main.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.11 -Wall -Werror subdir-objects])
AC_CONFIG_FILES([Makefile])
AC_PROG_INSTALL
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CXX
AM_PROG_AR
LT_INIT
AC_OUTPUT
